# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.20.0)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(daplink)

include(${ZEPHYR_BASE}/samples/subsys/usb/common/common.cmake)

FILE(GLOB app_sources src/*.c src/flash_algo/*.c)
target_include_directories(app PRIVATE src/flash_algo src)

# Flash algorithm vendor files (conditionally compiled via Kconfig)
if(CONFIG_DAPLINK_FLASH_ALGO_STM32)
  list(APPEND app_sources ${CMAKE_CURRENT_SOURCE_DIR}/src/flash_algo/vendor_stm32.c)
endif()
if(CONFIG_DAPLINK_FLASH_ALGO_FREESCALE)
  list(APPEND app_sources ${CMAKE_CURRENT_SOURCE_DIR}/src/flash_algo/vendor_freescale.c)
endif()
if(CONFIG_DAPLINK_FLASH_ALGO_NXP)
  list(APPEND app_sources ${CMAKE_CURRENT_SOURCE_DIR}/src/flash_algo/vendor_nxp.c)
endif()
if(CONFIG_DAPLINK_FLASH_ALGO_MAXIM)
  list(APPEND app_sources ${CMAKE_CURRENT_SOURCE_DIR}/src/flash_algo/vendor_maxim.c)
endif()
if(CONFIG_DAPLINK_FLASH_ALGO_NUVOTON)
  list(APPEND app_sources ${CMAKE_CURRENT_SOURCE_DIR}/src/flash_algo/vendor_nuvoton.c)
endif()
if(CONFIG_DAPLINK_FLASH_ALGO_NORDIC)
  list(APPEND app_sources ${CMAKE_CURRENT_SOURCE_DIR}/src/flash_algo/vendor_nordic.c)
endif()
if(CONFIG_DAPLINK_FLASH_ALGO_ARM)
  list(APPEND app_sources ${CMAKE_CURRENT_SOURCE_DIR}/src/flash_algo/vendor_arm.c)
endif()
if(CONFIG_DAPLINK_FLASH_ALGO_REALTEK)
  list(APPEND app_sources ${CMAKE_CURRENT_SOURCE_DIR}/src/flash_algo/vendor_realtek.c)
endif()
if(CONFIG_DAPLINK_FLASH_ALGO_AMBIQ)
  list(APPEND app_sources ${CMAKE_CURRENT_SOURCE_DIR}/src/flash_algo/vendor_ambiq.c)
endif()

# Remove BULK v2 class for low-RAM boards
if(CONFIG_SOC_STM32F103X8)
  list(REMOVE_ITEM app_sources ${CMAKE_CURRENT_SOURCE_DIR}/src/usbd_dap_v2.c)
  list(REMOVE_ITEM app_sources ${CMAKE_CURRENT_SOURCE_DIR}/src/msc_lun.c)
  list(REMOVE_ITEM app_sources ${CMAKE_CURRENT_SOURCE_DIR}/src/msc_daplink.c)
  list(REMOVE_ITEM app_sources ${CMAKE_CURRENT_SOURCE_DIR}/src/flash_prog.c)
  list(REMOVE_ITEM app_sources ${CMAKE_CURRENT_SOURCE_DIR}/src/intelhex.c)
endif()

target_sources(app PRIVATE ${app_sources})
